# algorythm

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  algorythm.hpp
.github/workflows/: build_and_test.yml  cmake_format.yml  main.yml  yaml_format.yml
include/: algorythm.hpp
include/algorythm/: statistic.hpp
include/algorythm/helpers/: predicate.hpp  select.hpp
include/algorythm/statistic/: extremes.hpp  venginealgorythm.hpp
test/: CMakeLists.txt  main.cpp
